@@ -1,4 +1,6 @@
 Version 1.6+svn:
+ * Editor2:
+   * New feature: exporting of selection coordinates to system clipboard
  * Language and i18n:
    * updated translations: British English, Catalan, German, Finnish, Hebrew,
      Italian, Turkish
